[gd_scene load_steps=9 format=3 uid="uid://t4vrk47fmr35"]

[ext_resource type="Script" uid="uid://c12ui2dc4h345" path="res://character.gd" id="1_glpr6"]
[ext_resource type="Texture2D" uid="uid://dj8b50ldnibvx" path="res://assets/sanic_ball.png" id="2_pjt0s"]
[ext_resource type="Texture2D" uid="uid://dgordgqbmihpd" path="res://assets/sanic_standing.png" id="3_wa5vi"]
[ext_resource type="Script" uid="uid://b38exo7wrm7hg" path="res://sensor.gd" id="4_wfnr8"]
[ext_resource type="Texture2D" uid="uid://bh5wbw5y1dj7l" path="res://assets/sanic_sprites2-row1.png" id="5_px5sl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjt0s"]
size = Vector2(40, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qfo5"]
atlas = ExtResource("5_px5sl")
region = Rect2(0, 0, 98, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_yxww1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qfo5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[node name="Character" type="CharacterBody2D"]
floor_constant_speed = true
script = ExtResource("1_glpr6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pjt0s")

[node name="SanicBall" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.427, 0.427)
texture = ExtResource("2_pjt0s")

[node name="SanicStanding" type="Sprite2D" parent="."]
position = Vector2(-3, -12)
scale = Vector2(0.427, 0.427)
texture = ExtResource("3_wa5vi")

[node name="GroundSensor1" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(20, 30)
target_position = Vector2(0, 30)
script = ExtResource("4_wfnr8")

[node name="GroundSensor2" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-20, 30)
target_position = Vector2(0, 30)
script = ExtResource("4_wfnr8")

[node name="GroundSensor3" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 30)
target_position = Vector2(0, 30)
script = ExtResource("4_wfnr8")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_yxww1")
animation = &"walking"
